<?xml version="1.0" encoding="utf-8"?>
<Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_blue"
    android:elevation="20dp"
    >

    <RelativeLayout
        android:id="@+id/item_toolbar_relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/item_toolbar_relative_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_title"
            android:textSize="35sp"
            android:layout_marginTop="25dp"
            android:textColor="#fff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/item_toolbar_relative_text"
            android:orientation="horizontal"

            >
            <com.jonatan_vahlberg.shoppinglist.helper.EditTextCustom
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:hint="@string/item_hint"
                android:textColor="#fff"
                android:imeOptions="actionSend"
                android:inputType="text"
                />
            <com.jonatan_vahlberg.shoppinglist.helper.EditTextCustom
                android:id="@+id/item_amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"
                android:hint="1"
                android:autofillHints="1"
                android:inputType="number"
                android:textColor="#fff"
                android:imeOptions="actionDone"
                />
            <Spinner
                android:id="@+id/item_spinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:background="@color/app_blue"
                />
            <Button
                android:id="@+id/item_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:background="#00000000"
                android:text="@string/add"
                android:textColor="#fff"
                android:textSize="30sp"
                />

        </LinearLayout>
    </RelativeLayout>

</Toolbar>